fix: reduce Navbar margin for improved spacing

--- a/app/shared/ui/Navbar/navbar.module.scss
+++ b/app/shared/ui/Navbar/navbar.module.scss
@@ -74,7 +74,7 @@
     color: #fff;
     gap: 42px;
     width: 100%;
-    margin-top: 3rem;
+    margin-top: 2.4rem;
     .bubbleR {
       width: 100%;
       z-index: 0;
